# RandomPointsBenchmark

./: CMakeLists.txt  README.md
src/: MTGenerator.cpp  MTGenerator.h  Point.h  XorShiftGenerator.cpp  XorShiftGenerator.h  main.cpp
